# epoll_api

./: .tarpaulin.toml  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: main.yml
examples/: client.rs  server.rs
src/: data_kind.rs  lib.rs  max_events.rs  time_out.rs  timeout.rs  utils.rs
src/utils/: mod.rs  read_size.rs
