[package]
name = "epoll_api"
version = "0.0.0"
edition = "2018"

description = "Completly safe EPOLL interface"
keywords = ["epoll", "library"]
categories = ["os::linux-apis", "filesystem", "network-programming"]

repository = "https://github.com/Stargateur/epoll_api/"
documentation = "https://docs.rs/epoll_api/"

include = ["src/**/*.rs", "Cargo.toml"]

authors = ["Antoine PLASKOWSKI <plaskowski.stanislas@gmail.com>"]
license = "MIT"
readme = "README.md"

[features]
default = []

log = []

[dependencies]
epoll = "4"
libc = "0.2"

# utils
bounded-integer = "0.3"
static_assertions = "1"

[dev-dependencies]