[package]
name = "epoll_api"
version = "0.0.0"
edition = "2018"

description = "Completly safe EPOLL interface"
keywords = ["epoll", "library"]
categories = ["os::linux-apis", "filesystem", "network-programming"]

repository = "https://github.com/Stargateur/epoll_api/"
documentation = "https://docs.rs/epoll_api/"

include = ["src/**/*.rs", "Cargo.toml"]

authors = ["Antoine PLASKOWSKI <plaskowski.stanislas@gmail.com>"]
license = "MIT"
readme = "README.md"

[features]
default = []

[dependencies]
epoll = "4"
libc = "0.2"

# utils
# unfortunatly the crate is too limited for my use case
bounded-integer = "0.4"
static_assertions = "1"
snafu = "0.6"
tracing = "0.1"

[dev-dependencies]
nix = "0.20"
tracing-subscriber = "0.2"

[dev-dependencies.tracing]
version = "0.1"
features = ["max_level_trace", "release_max_level_trace"]